Closed Bug 331249 Opened 19 years ago Closed 19 years ago

fix stride calculation for RGB24 image surfaces

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

We're miscalculating the stride for RGB24 image surfaces as width*3 instead of width*4 -- they're not packed pixel, but are instead xRGB instead of ARGB.
Attached patch fix stride calcSplinter Review
Fix.
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
Attachment #215804 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: