b=331249, fix image surface stride calculation for RGB24 when allocating data, r=me